--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -1,17 +1,30 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
     listen 80;
     server_name 1shot.foundr.yjay.co;
 
     location / {
         proxy_pass http://172.18.0.2:30000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;  # Required for WebSockets
+        proxy_set_header Connection $connection_upgrade;  # Required for WebSockets
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;  # Pass the real IP of the client to the application
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
-server {
-    listen 80;
-    server_name campaign.foundr.yjay.co;
+# server {
+#     listen 80;
+#     server_name campaign.foundr.yjay.co;
 
-    location / {
-        proxy_pass http://172.18.0.2:30000;
-    }
-}
+#     location / {
+#         proxy_pass http://172.18.0.2:30000;
+#     }
+# }
