--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -7,8 +7,11 @@ server {
     listen 80;
     server_name 1shot.foundr.yjay.co;
 
+    resolver 127.0.0.11;  # Docker's internal DNS resolver
+    # set $backend myfoundryvtt_container;
+
     location / {
-        proxy_pass http://172.18.0.2:30000;
+        proxy_pass http://myfoundryvtt_container:30000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;  # Required for WebSockets
         proxy_set_header Connection $connection_upgrade;  # Required for WebSockets
