--- a/nginx_proxy/nginx.conf
+++ b/nginx_proxy/nginx.conf
@@ -8,7 +8,6 @@ server {
     server_name 1shot.foundr.yjay.co;
 
     resolver 127.0.0.11;  # Docker's internal DNS resolver
-    # set $backend myfoundryvtt_container;
 
     location / {
         proxy_pass http://myfoundryvtt_container:30000;
@@ -23,11 +22,21 @@ server {
     }
 }
 
-# server {
-#     listen 80;
-#     server_name campaign.foundr.yjay.co;
+server {
+    listen 80;
+    server_name campaign.foundr.yjay.co;
 
-#     location / {
-#         proxy_pass http://172.18.0.2:30000;
-#     }
-# }
+    resolver 127.0.0.11;  # Docker's internal DNS resolver
+
+    location / {
+        proxy_pass http://foundrycampaign_container:29999;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;  # Required for WebSockets
+        proxy_set_header Connection $connection_upgrade;  # Required for WebSockets
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;  # Pass the real IP of the client to the application
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
